2005-01-27  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/notation.itely: added info about what
	\voiceFoo does.  Also rewrote warning about marks at
	a line break.

	* Docuementation/user/changing-defaults.itely: added info
	about putting dynamics in parenthesis and brackets.

2005-01-27  Werner Lemberg  <wl@gnu.org>

	* mf/feta-schrift.mf ("Trill (`tr')"): Fix typo.

2005-01-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/feta-schrift.mf: reverse u and d portato. Fixes:
	portato-direction.ly

	* lily/beam.cc (consider_auto_knees): add beam height to
	threshold. Fixes: knee-multiple-beam.ly

	* lily/instrument-name-engraver.cc (acknowledge_grob): also ignore
	pedal line spanners. Fixes: instrument-center-pedal.ly

	* lily/auto-beam-engraver.cc (acknowledge_grob): stop beam
	if encountering barline. Fixes: auto-beam-repeat.ly

2005-01-26  Werner Lemberg  <wl@gnu.org>

	* mf/feta-slag.mf (draw_trillelement): Fix shape to get clean
	overlapping.

	* mf/feta-toevallig.mf (draw_meta_sharp): Fix shape to avoid curves
	with inflections for the 1/2 sharp glyph.

	* mf/feta-schrift.mf ("Trill (`tr')"): Fix start position of
	connection between `t' and `r'.
	Unify bulb with the rest of `r' to avoid grazing outlines which
	confuses the overlap removal algorithm of fontforge.

	* mf/feta-bolletjes.mf (draw_slash): Fix shape to avoid curves with
	inflections.
	(draw_cross): Fix shape to have uniform thickness in corners.

	* mf/feta-pendaal.mf (draw_pedal_P): Break shape into smaller pieces
	to avoid an uneven number of self-intersections; this confuses
	fontforge.
	Fix a slight bug in the shape at left bottom (which is visible only
	at high magnifications).
	`Center' the stem horizontally to avoid overlapping.

2005-01-24  Werner Lemberg  <wl@gnu.org>

	* mf/feta-autometric.mf (fet_beginfont): Set font_coding_scheme
	to `asis'.
	(fet_begingroup): Save group name in string `feta_group'.
	(fet_endgroup): Updated.