@@ -91,7 +91,7 @@ do_break_substitution (SCM src)
     return substitute_grob (unsmob_grob (src));
   else if (ly_c_vector_p (src))
     {
-      int len = SCM_VECTOR_LENGTH (src);
+      int len = scm_c_vector_length (src);
       SCM nv = scm_c_make_vector (len, SCM_UNDEFINED);
       for (int i = 0; i < len; i++)
 	{
